--- a/components/header.html
+++ b/components/header.html
@@ -17,99 +17,32 @@
                         <!-- Navigation Items -->
                         <li class="uk-parent uk-active">
                             <a href="index.php" class="uk-navbar-nav-subtitle">
-                                <div>Home1<div class="uk-navbar-subtitle">Welcome</div>
+                                <div>Home<div class="uk-navbar-subtitle">Welcome</div>
                                 </div>
                             </a>
                         </li>
                         <li>
-                            <a href="rooms2.php" class="uk-navbar-nav-subtitle">
+                            <a href="#" class="uk-navbar-nav-subtitle">
                                 <div>RESORTS<div class="uk-navbar-subtitle">Our Best Suites</div>
                                 </div>
                             </a>
-                            <div class="uk-navbar-dropdown uk-navbar-dropdown-width-4 impx-megamenu"
-                                data-uk-drop="boundary: .impx-navbar-right; boundary-align: true; pos: bottom-justify;">
-                                <div class="uk-navbar-dropdown-grid uk-child-width-1-2" data-uk-grid>
-                                    <!-- <div>
-                                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header uk-text-bold">Rooms Page Style 1
-                                            </li>
-                                            <li>
-                                                <a href="rooms1.html">ACCOMMDATIONS</a>
-                                            </li>
-                                        </ul>
-                                    </div> -->
-                                    <div class="uk-navbar-dropdown">
-                                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li><a href="index.html">Homepage 1</a></li>
-                                            <li><a href="index2.html">Homepage 2</a></li>
-                                            <li><a href="index3.html">Homepage 3</a></li>
-                                        </ul>
-                                    </div>
-                                    <div>
-                                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header uk-text-bold">Rooms Page Style 1
-                                            </li>
-                                            <li>
-                                                <a href="rooms1.html"><img src="images/rooms/room-menu-1.jpg"
-                                                        alt=""></a>
-                                                <p class="uk-margin-small-bottom uk-margin-small-top impx-hidden-m">
-                                                    emper enim ita adsumit aliquid, quae dederit non</p>
-                                                <a class="uk-button uk-button-default uk-button-small impx-button impx-button-outline aqua small small-border"
-                                                    href="rooms1.html">Visit Page</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <!-- <div>
-                                        <div>
-                                            <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                <li class="uk-nav-header uk-margin-small-bottom uk-text-bold">
-                                                    Room Detail Page</li>
-                                                <li>
-                                                    <div class="uk-grid-small" data-uk-grid>
-                                                        <div class="uk-width-auto">
-                                                            <i
-                                                                class="fa fa-check-square-o fa-05x circle impx-text-aqua border-aqua uk-margin-remove uk-visible@m"></i>
-                                                        </div>
-                                                        <div class="uk-width-expand">
-                                                            <p class="uk-margin-remove uk-visible@s impx-hidden-m">
-                                                                Sin tantum modo ad indicia veteris</p>
-                                                            <a href="room-detail.html">Room Detail 1
-                                                                &raquo;</a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="uk-grid-small" data-uk-grid>
-                                                        <div class="uk-width-auto">
-                                                            <i
-                                                                class="fa fa-check-square-o fa-05x circle impx-text-aqua border-aqua uk-margin-remove uk-visible@m"></i>
-                                                        </div>
-                                                        <div class="uk-width-expand">
-                                                            <p class="uk-margin-remove uk-visible@s impx-hidden-m">
-                                                                Sin tantum modo ad indicia veteris</p>
-                                                            <a href="room-detail2.html" class="uk-margin-small-top">Room
-                                                                Detail
-                                                                2 &raquo;</a>
-                                                        </div>
-                                                    </div>
-
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div> -->
-                                </div>
+                            <div class="uk-navbar-dropdown">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li><a href="accommandations.php">ACCOMMADANTIONS</a></li>
+                                    <li><a href="restaurant.php">RESTAURANT</a></li>
+                                </ul>
                             </div>
                         </li>
-                        <li><a href="restaurant.php">
-                                <div>Restaurant<div class="uk-navbar-subtitle">In-house Restaurant</div>
-                                </div>
-                            </a></li>
-                        <li><a href="spa.html">
-                                <div>Spa<div class="uk-navbar-subtitle">Our Spa Service</div>
-                                </div>
-                            </a></li>
                         <li><a href="activities.html" class="uk-navbar-nav-subtitle">
                                 <div>Activities<div class="uk-navbar-subtitle">Our Facilities</div>
                                 </div>
-                            </a></li>
+                            </a>
+                            <div class="uk-navbar-dropdown">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li><a href="spa.php">SPA</a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <!-- <li class="uk-parent">
                             <a href="#" class="uk-navbar-nav-subtitle">
                                 <div>Pages<div class="uk-navbar-subtitle">the Other Pages</div>
