--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,6 @@
 <style>
-    /* 设置链接文字颜色 */
     .custom-link-color {
         color: red;
-        /* 设置为所需的颜色 */
     }
 </style>
 <div class="uk-container uk-container-expand">
@@ -37,18 +35,18 @@
                             </a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-dropdown-nav">
-                                    <li class="uk-nav-header"><a href="accommandations.php">ACCOMMADANTIONS</a></li>
-                                    <li class="uk-nav-header"><a href="restaurant.php">RESTAURANT</a></li>
+                                    <li class="uk-active"><a href="accommandations.php">ACCOMMADANTIONS</a></li>
+                                    <li class="uk-active"><a href="restaurant.php">RESTAURANT</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="activities.html" class="uk-navbar-nav-subtitle">
+                        <li><a href="#" class="uk-navbar-nav-subtitle">
                                 <div>Activities<div class="uk-navbar-subtitle">Our Facilities</div>
                                 </div>
                             </a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav custom-link-color">
-                                    <li class="uk-nav-header"><a href="spa.php">SPA</a></li>
+                                    <li class="uk-active"><a href="spa.php">SPA</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -68,7 +66,7 @@
                                 </ul>
                             </div>
                         </li> -->
-                        <li><a href="contact.html" class="uk-navbar-nav-subtitle">
+                        <li><a href="contact.php" class="uk-navbar-nav-subtitle">
                                 <div>Contact<div class="uk-navbar-subtitle">Get in Touch</div>
                                 </div>
                             </a></li>
