--- a/components/header.html
+++ b/components/header.html
@@ -50,22 +50,18 @@
                                 </ul>
                             </div>
                         </li>
-                        <!-- <li class="uk-parent">
-                            <a href="#" class="uk-navbar-nav-subtitle">
-                                <div>Pages<div class="uk-navbar-subtitle">the Other Pages</div>
+                        <li><a href="#" class="uk-navbar-nav-subtitle">
+                                <div>About<div class="uk-navbar-subtitle">Our Facilities</div>
                                 </div>
                             </a>
                             <div class="uk-navbar-dropdown">
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="testimonial.html">Testimonial</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="single-post.html">Single Post</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="element.html">Element</a></li>
+                                <ul class="uk-nav uk-navbar-dropdown-nav custom-link-color">
+                                    <li class="uk-active"><a href="about.php">About Us</a></li>
+                                    <li><a href="testimonial.php">Testimonial</a></li>
+                                    <li><a href="gallery.php">Gallery</a></li>
                                 </ul>
                             </div>
-                        </li> -->
+                        </li>
                         <li><a href="contact.php" class="uk-navbar-nav-subtitle">
                                 <div>Contact<div class="uk-navbar-subtitle">Get in Touch</div>
                                 </div>
@@ -76,14 +72,6 @@
             </nav>
         </div>
         <!-- Header Navigation End -->
-
-        <!-- Promo Ribbon -->
-        <!-- <div class="uk-width-auto uk-position-relative">
-            <div class="ribbon">
-                <i><span><s></s>30% <span>Off!</span><s></s></span></i>
-            </div>
-        </div> -->
-        <!-- Promo Ribbon End -->
 
     </div>
 </div>
