--- a/components/header-mobile.html
+++ b/components/header-mobile.html
@@ -7,23 +7,27 @@
                 <a href="index.php">Home</a>
             </li>
             <li class="uk-parent">
-                <a href="rooms2.php" class="uk-navbar-nav-subtitle">Rooms</a>
+                <a href="#">Resort</a>
+                <ul class="uk-nav-sub">
+                    <li><a href="accommandations.php">Accommandations</a></li>
+                    <li><a href="restaurant.php">Restaurant</a></li>
+                </ul>
             </li>
-            <li><a href="restaurant.php">Restaurant</a></li>
-            <li><a href="spa.html">Spa</a></li>
-            <li><a href="activities.html">Activities</a></li>
+            <li class="uk-parent">
+                <a href="#">Activities</a>
+                <ul class="uk-nav-sub">
+                    <li><a href="spa.php">Spa</a></li>
+                </ul>
+            </li>
             <li class="uk-parent">
                 <a href="#">Pages</a>
                 <ul class="uk-nav-sub">
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="testimonial.html">Testimonial</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="single-post.html">Single Post</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="element.html">Element</a></li>
+                    <li><a href="about.php">About Us</a></li>
+                    <li><a href="testimonial.php">Testimonial</a></li>
+                    <li><a href="gallery.php">Gallery</a></li>
                 </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
         </ul>
 
     </div>
