--- a/components/footer.html
+++ b/components/footer.html
@@ -12,8 +12,8 @@
                         quid ea
                         postulet.</p>
                     <!-- Site Copyright -->
-                    <p class="impx-copyright"><a href="https://www.templatespoint.net" target="_blank">Templates
-                            Point</a></p>
+                    <!-- <p class="impx-copyright"><a href="https://www.templatespoint.net" target="_blank">Templates
+                            Point</a></p> -->
                 </div>
             </div>
         </div>
