--- a/components/header-mobile.html
+++ b/components/header-mobile.html
@@ -20,7 +20,7 @@
                 </ul>
             </li>
             <li class="uk-parent">
-                <a href="#">Pages</a>
+                <a href="#">About</a>
                 <ul class="uk-nav-sub">
                     <li><a href="about.php">About Us</a></li>
                     <li><a href="testimonial.php">Testimonial</a></li>
