--- a/components/footer.html
+++ b/components/footer.html
@@ -1,10 +1,20 @@
+<style>
+    .logo {
+        width: 60px;
+        height: 60px;
+    }
+
+    #impx-footer {
+        background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(72, 218, 162, 1) 100%);
+    }
+</style>
 <footer id="impx-footer" class="uk-padding uk-padding-remove-bottom uk-padding-remove-horizontal">
     <div class="uk-container">
         <div class="uk-flex uk-flex-center data-uk-grid">
             <div class="uk-width-1-2@xl uk-width-1-2@l uk-width-2-3@m">
                 <div class="impx-footer-logo uk-align-center uk-text-center">
                     <!-- Footer Logo -->
-                    <img src="images/logo.png" alt="" class="">
+                    <img src="images/logo.svg" alt="" class="logo">
                     <!-- Footer Note -->
                     <p class="uk-margin-bottom">Erit enim mecum, si tecum erit. Re mihi non aeque
                         satisfacit, et
