--- a/components/header.html
+++ b/components/header.html
@@ -2,6 +2,11 @@
     .custom-link-color {
         color: red;
     }
+
+    .logo {
+        width: 60px;
+        height: 60px;
+    }
 </style>
 <div class="uk-container uk-container-expand">
     <div data-uk-grid>
@@ -9,7 +14,7 @@
         <!-- Header Logo -->
         <div class="uk-width-auto">
             <div class="impx-logo">
-                <a href="index.php"><img src="images/logo.png" class="" alt="Logo"></a>
+                <a href="index.php"><img src="images/logo.svg" class="logo" alt="Logo"></a>
             </div>
         </div>
         <!-- Header Logo End-->
