--- a/components/footer.html
+++ b/components/footer.html
@@ -1,7 +1,7 @@
 <style>
-    .logo {
-        width: 60px;
-        height: 60px;
+    .logo_f {
+        width: 120px !important;
+        height: 120px !important;
     }
 
     #impx-footer {
@@ -14,7 +14,7 @@
             <div class="uk-width-1-2@xl uk-width-1-2@l uk-width-2-3@m">
                 <div class="impx-footer-logo uk-align-center uk-text-center">
                     <!-- Footer Logo -->
-                    <img src="images/logo.svg" alt="" class="logo">
+                    <img src="images/logo/logo-black.svg" alt="" class="logo_f">
                     <!-- Footer Note -->
                     <p class="uk-margin-bottom">Erit enim mecum, si tecum erit. Re mihi non aeque
                         satisfacit, et
