--- a/components/header.html
+++ b/components/header.html
@@ -4,8 +4,8 @@
     }
 
     .logo {
-        width: 60px;
-        height: 60px;
+        width: 85px !important;
+        height: 85px !important;
     }
 </style>
 <div class="uk-container uk-container-expand">
@@ -14,7 +14,7 @@
         <!-- Header Logo -->
         <div class="uk-width-auto">
             <div class="impx-logo">
-                <a href="index.php"><img src="images/logo.svg" class="logo" alt="Logo"></a>
+                <a href="index.php"><img src="images/logo/logo-white.svg" class="logo" alt="Logo"></a>
             </div>
         </div>
         <!-- Header Logo End-->
