--- a/components/header.html
+++ b/components/header.html
@@ -4,8 +4,8 @@
     }
 
     .logo {
-        width: 85px !important;
-        height: 85px !important;
+        width: 200px !important;
+        height: 200px !important;
     }
 </style>
 <div class="uk-container uk-container-expand">
@@ -13,7 +13,7 @@
 
         <!-- Header Logo -->
         <div class="uk-width-auto">
-            <div class="impx-logo">
+            <div>
                 <a href="index.php"><img src="images/logo/logo-white.svg" class="logo" alt="Logo"></a>
             </div>
         </div>
