--- a/css/style.css
+++ b/css/style.css
@@ -3038,7 +3038,7 @@ s:nth-of-type(2) {
 .impx-hp-booking-form button {
 	padding-left: 14px;
 	padding-right: 14px;
-	background: #f857a6;
+	background: #131313 !important;
 	/* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #ff5858, #f857a6);
 	/* Chrome 10-25, Safari 5.1-6 */
@@ -3049,6 +3049,10 @@ s:nth-of-type(2) {
 	text-transform: uppercase;
 	border-radius: 20px;
 	font-weight: 400;
+}
+
+#book {
+	background-color: #00b09b !important;
 }
 
 .impx-hp-booking-form button.rooms,
