--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
     }
 
     #impx-footer {
-        background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(72, 218, 162, 1) 100%);
+        background: black;
     }
 </style>
 <footer id="impx-footer" class="uk-padding uk-padding-remove-bottom uk-padding-remove-horizontal">
@@ -14,7 +14,7 @@
             <div class="uk-width-1-2@xl uk-width-1-2@l uk-width-2-3@m">
                 <div class="impx-footer-logo uk-align-center uk-text-center">
                     <!-- Footer Logo -->
-                    <img src="images/logo/logo-black.svg" alt="" class="logo_f">
+                    <img src="images/logo/logo-white.svg" alt="" class="logo_f">
                     <!-- Footer Note -->
                     <p class="uk-margin-bottom">Erit enim mecum, si tecum erit. Re mihi non aeque
                         satisfacit, et
