--- a/css/style.css
+++ b/css/style.css
@@ -3040,7 +3040,7 @@ s:nth-of-type(2) {
 	padding-right: 14px;
 	background: #131313 !important;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #ff5858, #f857a6);
+	/* background: -webkit-linear-gradient(to right, #ff5858, #f857a6); */
 	/* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #ff5858, #f857a6);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
