--- a/components/header.html
+++ b/components/header.html
@@ -64,6 +64,7 @@
                                     <li class="uk-active"><a href="about.php">About Us</a></li>
                                     <li><a href="testimonial.php">Testimonial</a></li>
                                     <li><a href="gallery.php">Gallery</a></li>
+                                    <li><a href="newsletter.php">Newsletter</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -82,6 +83,6 @@
 </div>
 </div>
 </div>
-
+newsletter
 </header>
 <!-- HEADER END -->
