--- a/components/footer.html
+++ b/components/footer.html
@@ -16,11 +16,8 @@
                     <!-- Footer Logo -->
                     <img src="images/logo/logo-white.svg" alt="" class="logo_f">
                     <!-- Footer Note -->
-                    <p class="uk-margin-bottom">Erit enim mecum, si tecum erit. Re mihi non aeque
-                        satisfacit, et
-                        quidem locis dissimile homini. Intrandum est igitur in rerum naturam et penitus
-                        quid ea
-                        postulet.</p>
+                    <p class="uk-margin-bottom">Indulge in opulence at our luxury resort. Unparalleled comfort,
+                        world-class amenities, and impeccable service. Your extraordinary escape begins here.</p>
                     <!-- Site Copyright -->
                     <!-- <p class="impx-copyright"><a href="https://www.templatespoint.net" target="_blank">Templates
                             Point</a></p> -->
