--- a/components/header.html
+++ b/components/header.html
@@ -4,23 +4,24 @@
     }
 
     .logo {
-        width: 200px !important;
-        height: 200px !important;
+        width: 150px !important;
+        height: 150px !important;
     }
 </style>
 <div class="uk-container uk-container-expand">
     <div data-uk-grid>
 
         <!-- Header Logo -->
+
         <div class="uk-width-auto">
             <div>
+                <!-- <p><i class="fa fa-phone"></i> Phone : +61 02 82300678</p> -->
                 <a href="index.php"><img src="images/logo/logo-white.svg" class="logo" alt="Logo"></a>
             </div>
         </div>
         <!-- Header Logo End-->
 
         <!-- Header Navigation -->
-
         <div class="uk-width-expand uk-position-relative">
             <nav class="uk-navbar-container uk-navbar-transparent uk-visible@s uk-visible@m" data-uk-navbar>
 
