--- a/components/contactInfo.html
+++ b/components/contactInfo.html
@@ -6,8 +6,10 @@
             <div class="uk-light uk-width-1-2@xl uk-width-1-2@l uk-width-1-2@m uk-width-1-3@s">
                 <!-- address -->
                 <h5 class="uk-heading-line uk-margin-remove-bottom"><span>Address</span></h5>
-                <p class="impx-text-large uk-margin-top">10 - 20 High Mountain Rd. Blue Mountains, NSW<br />Australia
-                    Raya</p>
+                <p class="impx-text-large uk-margin-top">10 - 20 High Mountain Rd. Blue Mountains, NSW 2774
+                    <br /> Australia
+
+                </p>
             </div>
             <div class="uk-light uk-width-1-4@xl uk-width-1-4@l uk-width-1-4@m uk-width-1-3@s">
                 <!-- phone -->
